# PaciCaptionComposer

./: CMakeLists.txt  PaciOneMacOSXBundleInfo.plist.in  README.md
CaptionComposer/: CMakeLists.txt  FrontPage.qml  MainMenuBar.qml  MainPageContent.qml  ProgressOverlay.qml  global_defs.h  main.cpp  main.qml  qml.qrc  reg_classes.cpp
CaptionComposer/assets/: CaptionComposer.icns
CaptionComposer/assets/format_informations/: csv.cn.html  csv.cn.md  fcp7xml.cn.html  fcp7xml.cn.md  flamexml.cn.html  flamexml.cn.md  iTT.cn.html  iTT.cn.md  plaintext.cn.html  plaintext.cn.md  srt.cn.html  (+1 more)
CaptionComposer/config_pages/: ConfigPageBase.qml  ConfigPageCSV.qml  ConfigPageFCP7XML.qml  ConfigPageFlameXML.qml  ConfigPageITT.qml  ConfigPageSRT.qml  ConfigPageTXT.qml
CaptionComposer/custom_ui/: trackviewminimapimage.cpp  trackviewminimapimage.h
CaptionComposer/dialogs/: AboutDialog.qml  CloseWindowDialog.qml  FontDesignerDialog.qml  FormatConfigDialog.qml  ImportFileDialog.qml  NewSequenceDialog.qml  OpenFileDialog.qml  SaveFileDialog.qml  SequenceInfoDialog.qml  UserFortuneDialog.qml
CaptionComposer/front_page/: FrontPageBigButton.qml  FrontPageBigButton_copy.qml  FrontPageNewButton.qml  FrontPageOpenButton.qml  FrontPageRecentFilesPane.qml
CaptionComposer/logic/: maindocument.cpp  maindocument.h  model_filelist.cpp  model_filelist.h  model_sequence.cpp  model_sequence.h  model_track.cpp  model_track.h  networkserver.cpp  networkserver.h  settings_manager.cpp  settings_manager.h  uibrain.cpp  uibrain.h
CaptionComposer/main_menus/: PAMenuEdit.qml  PAMenuFile.qml  PAMenuHelp.qml  PAMenuView.qml  PARecentFileMenu.qml
CaptionComposer/main_page/: ClipEditWidget.qml  ClipEditWidget_bak.qml  ClipInfoButton.qml  ClipInfoButton_bak.qml  DisabledCover.qml  SequenceInfoButton.qml  SequenceView.qml  TrackButton.qml  TrackView.qml  TrackViewScrollBar.qml  TrackView_bak.qml
CaptionComposer/tool_classes/: baidu_translate_languages.cn.txt  baidutransapihandler.cpp  baidutransapihandler.h  ccnamespace.cpp  ccnamespace.h  filerecordlist.cpp  filerecordlist.h  sequenceinfogenerator.cpp  sequenceinfogenerator.h  tool_resources.qrc
(+6 files in other folders)
